# py-cxx-builder

./: .gitignore  LICENSE  README.md  pyproject.toml  upload.txt
src/py_cxx_builder/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_builder.py
